test/error/E7.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": ":hello"
		}
	}
}
